--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,4 +12,6 @@
 <app-child [text]="tex"></app-child>
 <app-time></app-time>
 <app-counter></app-counter>
+<app-one></app-one>
+<app-two></app-two>
 
